log
Fri 09 Sep 2022 12:23:12 PM UTC: 
 tests:  0|6
total_score: 0/70
b090be2
Fri 09 Sep 2022 12:59:19 PM UTC: 
 hashmap.c | 67 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 59 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 0/70
af21c04
Fri 09 Sep 2022 01:00:12 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
72dcc27
Fri 09 Sep 2022 01:29:13 PM UTC: 
 hashmap.c | 77 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 51 insertions(+), 26 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:22: error: ‘i’ undeclared (first use in this function)
   72 |      if(map->buckets[i]==NULL){
      |                      ^
hashmap.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘searchMap’:
hashmap.c:102:23: error: ‘capacity’ undeclared (first use in this function)
  102 |   size_t i = hash(key,capacity);
      |                       ^~~~~~~~
Compilation failed
4bd9d4a
Fri 09 Sep 2022 01:29:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:22: error: ‘i’ undeclared (first use in this function)
   72 |      if(map->buckets[i]==NULL){
      |                      ^
hashmap.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d489c44
Fri 09 Sep 2022 01:32:11 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
55b1a78
Fri 09 Sep 2022 08:40:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:9: error: ‘true’ undeclared (first use in this function)
   71 |   while(true){
      |         ^~~~
hashmap.c:71:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4ce0bea
Fri 09 Sep 2022 08:40:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
98d4206
Fri 09 Sep 2022 08:43:18 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
df2afab
Fri 09 Sep 2022 08:43:57 PM UTC: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  0|0
67b8f98
Fri 09 Sep 2022 08:44:27 PM UTC: 
 hashmap.c | 31 ++++++++++++++-----------------
 1 file changed, 14 insertions(+), 17 deletions(-)
In file included from test.c:4:
hashmap.c:76:1: error: expected identifier or ‘(’ before ‘return’
   76 | return;
      | ^~~~~~
hashmap.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
Compilation failed
d1fd460
Fri 09 Sep 2022 08:44:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2b94aeb
Fri 09 Sep 2022 08:44:53 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d4d9b54
Fri 09 Sep 2022 08:45:00 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
45266d0
Fri 09 Sep 2022 08:47:03 PM UTC: 
 hashmap.c | 18 ------------------
 1 file changed, 18 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f11b0dd
Fri 09 Sep 2022 08:47:19 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
ab31e18
Fri 09 Sep 2022 09:00:30 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
ebd83bd
Fri 09 Sep 2022 09:01:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f0ebef7
Fri 09 Sep 2022 09:02:24 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e6bd8d7
Fri 09 Sep 2022 09:04:22 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
21046cb
Fri 09 Sep 2022 09:21:21 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
a7634cb
Fri 09 Sep 2022 09:22:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b3f9afc
Fri 09 Sep 2022 09:23:16 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
b78b865
Fri 09 Sep 2022 09:24:33 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
3b9f1f9
Fri 09 Sep 2022 09:24:49 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
fa60e6a
Fri 09 Sep 2022 09:38:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5441812
Fri 09 Sep 2022 09:39:16 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8d433f0
Fri 09 Sep 2022 09:39:39 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
be8c652
Fri 09 Sep 2022 09:47:58 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
f821e8a
Fri 09 Sep 2022 09:54:00 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
4534315
Fri 09 Sep 2022 09:54:14 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d117903
